--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
     mongo:
         image: mongo:4.4.4
@@ -11,6 +9,13 @@ services:
             -   "27017:27017"
         volumes:
             - mongodb:/data/db
+
+    rmq:
+        image: rabbitmq:4.0.5-management
+        restart: always
+        ports:
+            - "5672:5672"
+            - "15672:15672"
 
 volumes:
     mongodb:
