--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nestjs/mongoose": "^11.0.0",
     "@nestjs/passport": "^11.0.4",
     "@nestjs/platform-express": "^10.0.2",
+    "amqplib": "^0.10.5",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -38,6 +39,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/amqplib": "^0.10.6",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
