--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nestjs/mongoose": "^11.0.0",
     "@nestjs/passport": "^11.0.4",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/schedule": "^5.0.1",
     "amqplib": "^0.10.5",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
