--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -3,6 +3,7 @@
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "apps/api/src",
     "projectType": "application",
+    "tags": [],
     "targets": {
         "build": {
             "executor": "nx:run-commands",
@@ -32,7 +33,10 @@
                     "buildTarget": "api:build:production"
                 }
             }
+        },
+        "docker-build": {
+            "dependsOn": ["build"],
+            "command": "docker build -f apps/api/Dockerfile . -t api"
         }
-    },
-    "tags": []
+    }
 }
