--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,36 @@
 services:
+    api:
+        container_name: api
+        build:
+            context: .
+            dockerfile: ./apps/api/Dockerfile
+        restart: always
+        env_file:
+            - ./envs/.api.env
+        ports:
+            - "3000:3000"
+        networks:
+            - my_network
+        depends_on:
+            - rmq
+            - account
+
+    account:
+        container_name: account
+        build:
+            context: .
+            dockerfile: ./apps/account/Dockerfile
+        restart: always
+        env_file:
+            - ./envs/.account.env
+        ports:
+            - "3001:3001"
+        networks:
+            - my_network
+        depends_on:
+            - rmq
+            - mongo
+
     mongo:
         image: mongo:4.4.4
         container_name: mongo
@@ -6,9 +38,11 @@ services:
         env_file:
             - ./envs/.mongo.env
         ports:
-            -   "27017:27017"
+            - "27017:27017"
         volumes:
             - mongodb:/data/db
+        networks:
+            - my_network
 
     rmq:
         image: rabbitmq:4.0.5-management
@@ -16,6 +50,12 @@ services:
         ports:
             - "5672:5672"
             - "15672:15672"
+        networks:
+            - my_network
 
 volumes:
     mongodb:
+
+networks:
+    my_network:
+        driver: bridge
