--- a/envs/.account.env.example
+++ b/envs/.account.env.example
@@ -1,13 +1,13 @@
 JWT_SECRET=fjkldsanjvf
 
-MONGO_LOGIN=admin
+MONGO_USER=admin
 MONGO_PASSWORD=admin
-MONGO_HOST=localhost
+MONGO_HOST=mongo
 MONGO_PORT=27017
 MONGO_DATABASE=monorepo
 MONGO_AUTH_DATABASE=admin
 
-AMQP_HOSTNAME=localhost
+AMQP_HOSTNAME=rmq
 AMQP_EXCHANGE=monorepo
 AMQP_QUEUE=monorepo.account
 AMQP_USER=guest
